# gdvn-mod

./: CMakeLists.txt  mod.json
.github/workflows/: multi-platform.yml
src/: config.hpp
src/adapters/: ActivePvpMatchResponseAdapter.hpp  PvpMatchAdapter.hpp  PvpPowerupAdapter.hpp
src/clients/auth/: AuthClient.cpp  AuthClient.hpp
src/clients/event/: EventClient.cpp  EventClient.hpp
src/clients/level/: LevelClient.cpp  LevelClient.hpp
src/clients/pvp/: PvpClient.cpp  PvpClient.hpp  PvpProgressClient.cpp  PvpProgressClient.hpp  PvpRealtimeClient.cpp  PvpRealtimeClient.hpp  PvpWebsocketClient.cpp  PvpWebsocketClient.hpp
src/clients/tournament/: TournamentContestClient.cpp  TournamentContestClient.hpp
src/clients/update/: UpdateClient.cpp  UpdateClient.hpp
src/clients/updater/: UpdaterClient.cpp  UpdaterClient.hpp
src/clients/websocket/: WebsocketClient.cpp  WebsocketClient.hpp
src/consts/: TableConst.hpp  WebsocketEventConst.hpp
src/dtos/pvp/: ActivePvpMatchResponseDto.hpp  PvpPowerupCastResponseDto.hpp  PvpPowerupStateDto.hpp
src/factories/: LevelInfoLayerFactory.cpp  LevelInfoLayerFactory.hpp
src/hooks/: CreatorLayer.cpp  LevelInfoLayer.cpp  MenuLayer.cpp  PauseLayer.cpp  PlayLayer.cpp
src/interfaces/: AntiCheatInterface.hpp  GameEventInterface.hpp  PvpRealtimeClientDelegate.hpp
src/models/: AuthModels.hpp  GithubModels.hpp  LevelModels.hpp  PvpModels.hpp
src/models/death/: DeathDataModel.cpp  DeathDataModel.hpp
src/services/: AttemptCounter.cpp  AttemptCounter.hpp  AuthService.cpp  CheatGuard.cpp  CheatGuard.hpp  DeathCounter.cpp  EventSubmitter.cpp  LevelService.cpp  LevelService.hpp  PvpOverlay.cpp  PvpOverlay.hpp  PvpOverlayService.cpp  PvpRealtimeSocket.cpp  PvpRealtimeSocket.hpp  PvpRealtimeSocket.mm  PvpSubmitter.cpp  PvpSubmitter.hpp  PvpSubmitterService.cpp  RaidSubmitter.cpp  VersionCheckerService.cpp
src/services/anticheat/: AntiCheatConfig.hpp  AntiCheatService.cpp  AntiCheatService.hpp  DamageBypassAntiCheatService.cpp  DamageBypassAntiCheatService.hpp  EclipseAntiCheatService.cpp  EclipseAntiCheatService.hpp  NoclipAntiCheatService.cpp  NoclipAntiCheatService.hpp  OpenHackAntiCheatService.cpp  OpenHackAntiCheatService.hpp  PrismAntiCheatService.cpp  PrismAntiCheatService.hpp  QolModAntiCheatService.cpp  QolModAntiCheatService.hpp  StartPositionAntiCheatService.cpp  StartPositionAntiCheatService.hpp
src/services/auth/: AuthService.cpp
src/services/cheat/: CheatGuardConfig.hpp  CheatGuardService.cpp  EclipseCheatGuardService.cpp  EclipseCheatGuardService.hpp  OpenHackCheatGuardService.cpp  (+5 more)
src/settings/: AuthSetting.cpp
src/utils/: DateUtils.cpp  DateUtils.hpp  LevelInfoLayerUtils.cpp  LevelInfoLayerUtils.hpp  StringUtils.cpp  StringUtils.hpp
(+32 files in other folders)
